@@ -1,3 +1,6 @@
+2011-10-03
+ * elementPosition and supporting operations
+
 2011-09-26
  * bool, onoff values
 
